--- a/BlazorTool.Client/Pages/Login.razor
+++ b/BlazorTool.Client/Pages/Login.razor
@@ -86,9 +86,10 @@
                 UserState.LangCode = identityData.LangCode;
                 UserState.UseOriginalColors = bool.TryParse(await ApiServiceClient.LoadSettingAsync("useOriginalColors", identityData.Name), out var useColors) && useColors;
                 identityData.UseOriginalColors = UserState.UseOriginalColors;
-                await UserState.SaveIdentityDataAsync(identityData); // Save identityData to local storage
+                bool isForceReload = await UserState.SaveIdentityDataAsync(identityData); // Save identityData to local storage
                 await ApiServiceClient.GetWODictionaries(identityData.PersonID, identityData.LangCode);
-                Navigation.NavigateTo("/");
+
+                Navigation.NavigateTo("/", isForceReload);
             }
             else
             {
