--- a/BlazorTool.Client/Components/AppointmentEditor.razor
+++ b/BlazorTool.Client/Components/AppointmentEditor.razor
@@ -177,9 +177,11 @@
                Appointment.End != default &&
                Appointment.Start < Appointment.End &&
                Appointment.MachineID != 0 &&
-               !string.IsNullOrEmpty(Appointment.DepName) &&
+               // !string.IsNullOrEmpty(Appointment.DepName) &&
                !string.IsNullOrWhiteSpace(Appointment.WODesc) &&
-               !string.IsNullOrWhiteSpace(Appointment.WOLevel);
+               !string.IsNullOrWhiteSpace(Appointment.WOLevel) &&
+               !string.IsNullOrWhiteSpace(Appointment.WOCategory) &&
+               !string.IsNullOrWhiteSpace(Appointment.WOReason);
     }
 
     private void OnTitleChange()
